style: fix overflow of message

--- a/chat/public/scss/chat.bundle.scss
+++ b/chat/public/scss/chat.bundle.scss
@@ -218,7 +218,7 @@ $padding-chat-lr: 12px;
 .chat-space {
   .chat-space-container {
     padding: $padding-chat-lr;
-    word-wrap: break-word;
+    overflow-wrap: break-word;
     height: calc_height(582px, 15px);
     overflow-y: scroll;
     .sender-message {
@@ -232,7 +232,7 @@ $padding-chat-lr: 12px;
         padding: 8px;
         font-size: $font-size-sm;
         border-radius: 13px 13px 13px 0px;
-        margin-right: 70px;
+        max-width: 78%;
       }
     }
     .recipient-message {
@@ -246,7 +246,7 @@ $padding-chat-lr: 12px;
         padding: 8px;
         font-size: $font-size-sm;
         border-radius: 13px 13px 0px 13px;
-        margin-left: 70px;
+        max-width: 78%;
       }
     }
     .message-time {
